kube-infra/kustomize/keptn/keptn/envs/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
  name: keptn-ingress
  namespace: ci-cd
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: api-gateway-nginx
            port:
              number: 80
        path: /
        pathType: Prefix
    host: keptn.ortelius.io
